# Legal-RAG-System

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: settings.example.yaml
docs/: legal_rag_phased_plan_ae087060.plan.md
scripts/: bootstrap.ps1  hf_download_to_raw.py
src/legal_rag/cli/: main.py
src/legal_rag/core/: models.py  settings.py
src/legal_rag/generation/: rag.py
src/legal_rag/ingest/: chunking.py  loaders.py  pipeline.py
src/legal_rag/providers/: embeddings.py  llm.py  registry.py
src/legal_rag/retrieval/: index.py
src/legal_rag/utils/: ids.py  jsonl.py
tests/unit/: test_chunking.py  test_jsonl.py
