[project]
name = "legal-rag-system"
version = "0.1.0"
description = "A Python base project structure for a Legal RAG system."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Legal RAG System Contributors" }]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0.1",
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
pdf = [
  "pypdf>=4.2",
]
embeddings = [
  "sentence-transformers>=3.0",
]
vectorstore = [
  "faiss-cpu>=1.8",
]
llm = [
  "openai>=1.30",
]

[project.scripts]
legal-rag = "legal_rag.cli.main:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
